--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1,10 +1,10 @@
 {
   "appName": {
-    "message": "timely",
+    "message": "Timely",
     "description": "The name of the application"
   },
   "appDescription": {
-    "message": "Anti-procrastination for Facebook",
+    "message": "Anti-procrastination chrome extension for Facebook",
     "description": "The description of the application"
   }
 }
