change a few details for the prod build

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -3,6 +3,6 @@
     "message": "Timely"
   },
   "appDescription": {
-    "message": "Anti-procrastination chrome extension for Facebook"
+    "message": "See how much time you're spending on Facebook in real-time"
   }
 }
